-- ================================================================
-- SQL DDL TEMPLATE (TOPIC 04)
-- ================================================================
-- WHAT SHOULD BE ADDED HERE:
-- 1) Full PostgreSQL DDL for your finalized schema.
-- 2) CREATE TABLE statements for all entities from your ER diagram.
-- 3) Primary keys, foreign keys, NOT NULL, UNIQUE, CHECK constraints.
-- 4) Indexes for important search/join columns.
-- 5) Clean structure and comments (group by tables/constraints/indexes).
--
-- RECOMMENDED ORDER:
-- 1) Tables
-- 2) Constraints (if not inline)
-- 3) Indexes
--
-- TEAM NOTE:
-- Add short attribution comments for who implemented which part.
-- Example:
-- [Name] - users, roles, permissions tables
-- [Name] - orders, payments, invoices tables
--
-- IMPORTANT:
-- The script must run in PostgreSQL and produce a working schema that
-- matches your approved ER diagram and conceptual schema.
-- Submit this as one SQL file.
-- ================================================================

-- Add your DDL below this line
-- 1. Створення ізольованої схеми
CREATE SCHEMA IF NOT EXISTS fitness_center;

-- 2. Створення кастомних ENUM-типів
CREATE TYPE fitness_center.day_of_week_enum AS ENUM (
  'monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday', 'sunday'
);

CREATE TYPE fitness_center.equipment_status_enum AS ENUM (
  'available', 'under repair', 'decommissioned'
);

CREATE TYPE fitness_center.trainer_availability_enum AS ENUM (
  'available', 'busy', 'on leave', 'unavailable'
);

CREATE TYPE fitness_center.membership_type_enum AS ENUM (
    'monthly', 'yearly', 'premium'
);


-- =============================================================================
-- 1. НЕЗАЛЕЖНІ (БАТЬКІВСЬКІ) ТАБЛИЦІ
-- =============================================================================

-- 1.1. Таблиця Members (Клієнти) — [MVP]
CREATE TABLE fitness_center.members (
  member_id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
  first_name varchar(15) NOT NULL,
  last_name varchar(25) NOT NULL,
  phone_number bigint NOT NULL UNIQUE,
  date_registration timestamp NOT NULL DEFAULT NOW()
);

-- 1.2. Таблиця Memberships (Типи абонементів) — [MVP]
CREATE TABLE fitness_center.memberships (
  membership_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  type_membership fitness_center.membership_type_enum NOT NULL,
  price_membership numeric(4) NOT NULL CHECK (price_membership >= 0)
);

-- 1.4. Таблиця Classes (Напрямки занять) — [MVP]
CREATE TABLE fitness_center.classes (
  class_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name_class varchar(100) NOT NULL
);

-- 1.8. Таблиця Trainers (Тренери) — [MVP]
CREATE TABLE fitness_center.trainers (
  trainer_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  first_name varchar(15) NOT NULL,
  last_name varchar(25) NOT NULL,
  trainer_availability fitness_center.trainer_availability_enum NOT NULL DEFAULT 'available'
);

-- 1.10. Таблиця Specializations (Довідник спеціалізацій) — [Final]
CREATE TABLE fitness_center.specializations (
  specialization_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name_specialization varchar(50) NOT NULL
);

-- 1.14. Таблиця Rooms (Зали фітнес-центру) — [Final]
CREATE TABLE fitness_center.rooms (
  room_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name_room varchar(100) NOT NULL,
  capacity smallint NOT NULL CHECK (capacity > 0)
);


-- =============================================================================
-- 2. ЗАЛЕЖНІ (ДОЧІРНІ) ТАБЛИЦІ
-- =============================================================================

-- 1.3. Таблиця Subscriptions (Придбані абонементи) — [MVP]
CREATE TABLE fitness_center.subscriptions (
  subscription_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  member_id uuid REFERENCES fitness_center.members(member_id) ON DELETE CASCADE,
  membership_id integer REFERENCES fitness_center.memberships(membership_id),
  start_date date NOT NULL,
  end_date date NOT NULL,
  
  CHECK (end_date >= start_date)
);

-- 1.5. Таблиця Schedule (Розклад занять) — [MVP / Advanced]
CREATE TABLE fitness_center.schedule (
  schedule_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  room_id integer REFERENCES fitness_center.rooms(room_id),
  class_id integer REFERENCES fitness_center.classes(class_id),
  trainer_id integer REFERENCES fitness_center.trainers(trainer_id),
  date_schedule date DEFAULT NULL,
  day_of_week fitness_center.day_of_week_enum DEFAULT NULL,
  start_time time NOT NULL,
  end_time time,
  
  CHECK (
    (date_schedule IS NOT NULL AND day_of_week IS NULL) OR 
    (date_schedule IS NULL AND day_of_week IS NOT NULL)
  ),
  CHECK (end_time IS NULL OR end_time > start_time)
);

-- 1.7. Таблиця Attendances (Облік відвідуваності) — [MVP]
CREATE TABLE fitness_center.attendances (
  attendance_id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  member_id uuid REFERENCES fitness_center.members(member_id) ON DELETE CASCADE,
  check_in_datetime timestamp NOT NULL,
  check_out_datetime timestamp DEFAULT NULL,
  
  CHECK (check_out_datetime >= check_in_datetime)
);

-- 1.13. Таблиця Progress (Прогрес та цілі) — [Final]
CREATE TABLE fitness_center.progress (
  progress_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  member_id uuid REFERENCES fitness_center.members(member_id) ON DELETE CASCADE,
  fitness_goals varchar(200) NOT NULL,
  progress_metrics varchar(150),
  goal_achievement_date date DEFAULT NULL
);

-- 1.16. Таблиця Equipment (Інвентар) — [Final]
CREATE TABLE fitness_center.equipment (
  equipment_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  room_id integer REFERENCES fitness_center.rooms(room_id) ON DELETE SET NULL,
  name_equipment varchar(50) NOT NULL,
  status_equipment fitness_center.equipment_status_enum NOT NULL DEFAULT 'available'
);


-- =============================================================================
-- 3. ПРОМІЖНІ ТАБЛИЦІ (MANY-TO-MANY)
-- =============================================================================

-- 1.6. Таблиця ClassRegistrations (Записи на заняття) — [MVP]
CREATE TABLE fitness_center.class_registrations (
  schedule_id integer REFERENCES fitness_center.schedule(schedule_id) ON DELETE CASCADE,
  member_id uuid REFERENCES fitness_center.members(member_id) ON DELETE CASCADE,
  
  PRIMARY KEY (schedule_id, member_id)
);

-- 1.9. Таблиця TrainerClasses (Допуски до занять) — [MVP]
CREATE TABLE fitness_center.trainer_classes (
  class_id integer REFERENCES fitness_center.classes(class_id) ON DELETE CASCADE,
  trainer_id integer REFERENCES fitness_center.trainers(trainer_id) ON DELETE CASCADE,
  
  PRIMARY KEY (class_id, trainer_id)
);

-- 1.11. Таблиця TrainerSpecializations (Спеціалізації тренерів) — [Final]
CREATE TABLE fitness_center.trainer_specializations (
  trainer_id integer REFERENCES fitness_center.trainers(trainer_id) ON DELETE CASCADE,
  specialization_id integer REFERENCES fitness_center.specializations(specialization_id) ON DELETE CASCADE,
  
  PRIMARY KEY (trainer_id, specialization_id)
);

-- 1.12. Таблиця PersonalTrainingSessions (Персональні тренування) — [Final]
CREATE TABLE fitness_center.personal_training_sessions (
  member_id uuid REFERENCES fitness_center.members(member_id) ON DELETE CASCADE,
  trainer_id integer REFERENCES fitness_center.trainers(trainer_id) ON DELETE CASCADE,
  start_datetime timestamp NOT NULL,
  end_datetime timestamp NOT NULL,
  
  PRIMARY KEY (member_id, trainer_id, start_datetime),
  CHECK (end_datetime > start_datetime)
);

-- 1.15. Таблиця Locations (Переміщення залами) — [Final]
CREATE TABLE fitness_center.locations (
  member_id uuid REFERENCES fitness_center.members(member_id) ON DELETE CASCADE,
  room_id integer REFERENCES fitness_center.rooms(room_id) ON DELETE CASCADE,
  start_datetime timestamp NOT NULL,
  end_datetime timestamp DEFAULT NULL,
  
  PRIMARY KEY (member_id, room_id, start_datetime),
  CHECK (end_datetime IS NULL OR end_datetime >= start_datetime)
);


-- =============================================================================
-- 4. ІНДЕКСИ ДЛЯ ОПТИМІЗАЦІЇ
-- =============================================================================

CREATE INDEX idx_members_phone ON fitness_center.members (phone_number);
CREATE INDEX idx_subscriptions_member ON fitness_center.subscriptions (member_id);
CREATE INDEX idx_attendances_member ON fitness_center.attendances (member_id);
CREATE INDEX idx_schedule_lookup ON fitness_center.schedule (date_schedule, day_of_week);

