// ╔══════════════════════════════════════════════════════════════════╗
// ║                     ER DIAGRAM — DBML                           ║
// ╚══════════════════════════════════════════════════════════════════╝
//
// 📌 ЩО ПОТРІБНО ЗРОБИТИ
// ──────────────────────────────────────────────────────────────────
//  1. Побудуйте ER-діаграму вашої бази даних у будь-якому зручному
//     інструменті — dbdiagram.io, draw.io, Lucidchart тощо.
//
//  2. Додайте зображення вашої фінальної ER-діаграми (можна вставити як посилання на зображення в інтернеті та обов'язково закомітити файл з діаграмою в репозиторій).
//
//  Посилання на ER-діаграму: ./er-diagram.png
//
//  2. Кожен учасник команди підписує таблиці, які він створював:
//
//     Руслан — Всі таблиці
//
//  4. У цьому файлі додайте DBML-код вашої схеми.
//     Якщо використовуєте dbdiagram.io — там є кнопка експорту в DBML.
//     Якщо draw.io або інший інструмент — скопіюйте схему вручну.
//
// ──────────────────────────────────────────────────────────────────
// 💡 ПІДКАЗКА
//
//  DBML виглядає ось так (це лише приклад — не копіюйте):
//
//  Table users {
//    id       bigint [primary key, increment]
//    username varchar(100) [not null]
//  }
//
//  Ref: posts.user_id > users.id
//
//  Повна документація: https://dbml.dbdiagram.io/docs/
// ══════════════════════════════════════════════════════════════════


// Вставте ваш DBML-код нижче 👇

// -----------------------------------------------------------------------------
// ENUM TYPES
// -----------------------------------------------------------------------------

Enum day_of_week_enum {
  "monday"
  "tuesday"
  "wednesday"
  "thursday"
  "friday"
  "saturday"
  "sunday"
}

Enum equipment_status_enum {
  "available"
  "under repair"
  "decommissioned"
}

Enum trainer_availability_enum {
   'available',
   'busy',
    'on leave',
    'unavailable'
}

Enum membership_type_enum {
  'monthly',
  'yearly',
  'premium'
}

// -----------------------------------------------------------------------------
// 1. НЕЗАЛЕЖНІ (БАТЬКІВСЬКІ) ТАБЛИЦІ
// -----------------------------------------------------------------------------

Table members {
  member_id uuid [pk, default: `gen_random_uuid()`]
  first_name varchar(15) [not null]
  last_name varchar(25) [not null]
  phone_number bigint [unique, not null]
  date_registration timestamp [not null, default: `NOW()`]

  Indexes {
    phone_number [name: 'idx_members_phone']
  }
}

Table memberships {
  membership_id integer [pk, increment]
  type_membership membership_type_enum [not null]
  price_membership numeric(4) [not null, note: 'CHECK (price_membership >= 0)']
}

Table classes {
  class_id integer [pk, increment]
  name_class varchar(100) [not null]
}

Table trainers {
  trainer_id integer [pk, increment]
  first_name varchar(15) [not null]
  last_name varchar(25) [not null]
  trainer_availability trainer_availability_enum [not null, default: 'available']
}

Table specializations {
  specialization_id integer [pk, increment]
  name_specialization varchar(50) [not null]
}

Table rooms {
  room_id integer [pk, increment]
  name_room varchar(100) [not null]
  capacity smallint [not null, note: 'CHECK (capacity > 0)']
}

// -----------------------------------------------------------------------------
// 2. ЗАЛЕЖНІ (ДОЧІРНІ) ТАБЛИЦІ
// -----------------------------------------------------------------------------

Table subscriptions {
  subscription_id integer [pk, increment]
  member_id uuid [ref: > members.member_id]
  membership_id integer [ref: > memberships.membership_id]
  start_date date [not null]
  end_date date [not null]

  Indexes {
    member_id [name: 'idx_subscriptions_member']
  }
}

Table schedule {
  schedule_id integer [pk, increment]
  room_id integer [ref: > rooms.room_id]
  class_id integer [ref: > classes.class_id]
  trainer_id integer [ref: > trainers.trainer_id]
  date_schedule date [default: null]
  day_of_week day_of_week_enum [default: null]
  start_time time [not null]
  end_time time

  Indexes {
    (date_schedule, day_of_week) [name: 'idx_schedule_lookup']
  }
}

Table attendances {
  attendance_id bigint [pk, increment]
  member_id uuid [ref: > members.member_id]
  check_in_datetime timestamp [not null]
  check_out_datetime timestamp [default: null]

  Indexes {
    member_id [name: 'idx_attendances_member']
  }
}

Table progress {
  progress_id integer [pk, increment]
  member_id uuid [ref: > members.member_id]
  fitness_goals varchar(200) [not null]
  progress_metrics varchar(150)
  goal_achievement_date date [default: null]
}

Table equipment {
  equipment_id integer [pk, increment]
  room_id integer [ref: > rooms.room_id]
  name_equipment varchar(50) [not null]
  status_equipment equipment_status_enum [not null, default: 'available']
}

// -----------------------------------------------------------------------------
// 3. ПРОМІЖНІ ТАБЛИЦІ (MANY-TO-MANY)
// -----------------------------------------------------------------------------

Table class_registrations {
  schedule_id integer [ref: > schedule.schedule_id]
  member_id uuid [ref: > members.member_id]

  Indexes {
    (schedule_id, member_id) [pk]
  }
}

Table trainer_classes {
  class_id integer [ref: > classes.class_id]
  trainer_id integer [ref: > trainers.trainer_id]

  Indexes {
    (class_id, trainer_id) [pk]
  }
}

Table trainer_specializations {
  trainer_id integer [ref: > trainers.trainer_id]
  specialization_id integer [ref: > specializations.specialization_id]

  Indexes {
    (trainer_id, specialization_id) [pk]
  }
}

Table personal_training_sessions {
  member_id uuid [ref: > members.member_id]
  trainer_id integer [ref: > trainers.trainer_id]
  start_datetime timestamp [not null]
  end_datetime timestamp [not null]

  Indexes {
    (member_id, trainer_id, start_datetime) [pk]
  }
}

Table locations {
  member_id uuid [ref: > members.member_id]
  room_id integer [ref: > rooms.room_id]
  start_datetime timestamp [not null]
  end_datetime timestamp [default: null]

  Indexes {
    (member_id, room_id, start_datetime) [pk]
  }
}